# rust-lambda-api

./: README.md
rust-lambda-api/: Cargo.toml
rust-lambda-api/src/: main.rs
rust_on_aws/: Cargo.toml  helper.sh
rust_on_aws/src/: main.rs
rust_on_aws_api_user_management/: Cargo.toml  README.md
rust_on_aws_api_user_management/.cargo/: config.toml
