[package]
name = "rust-lambda-api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bootstrap"
path = "src/main.rs"

[dependencies]
actix-web = "4.0.1"
env_logger = "0.9.0"
json = "0.12.4"
lambda-web = { version = "0.1.8", features = ["actix4"] }
log = "0.4.0"
regex = "1.5.5"
serde_json = "1.0.79"